added header, articles, h2

--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href="style.css" rel="stylesheet">
 </head>
 <body>
+<header>
 	<h1>Rob Fitzpatrick</h1>
-</body>
+</header>
+	<article>
+		<h2>Who?</h2>
+			<p>Yes, you have reached the magnificent website of the one, the only, Rob Fitzpatrick...  Musician.  Artist.  Spokesman of a generation?  Please, try and contain your  excitement!</p>
+	</article>
+	<article>
+		<h2>Why?</h2>
+			<p>Mr. Fitzpatrick is currently on leave from his life-long passion of music so he can pursue an expedited education in his new passion, web design.  Will this be an interesting experience?  All signs point to YES!</p>
+	</article>
 
+</body>
 </html>
