more attempts at something workable

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 	<div class="guitar"><img src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xaf1/t1.0-9/1001067_10200200309234870_790743847_n.jpg"></div>
 <h1>Rob Fitzpatrick</h1>
 	</header>
-	<div class="beach"><img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xpa1/t1.0-9/1555524_10201324430457198_1930011516_n.jpg"></div>
-	<div class="who">
+	<article>
 		<h2>Who?</h2>
 			<p>Yes, you have reached the magnificent website of the one, the only, Rob Fitzpatrick...  Musician.  Artist.  Spokesman of a generation?  Please, try and contain your excitement!</p>
-	</div>
-	<div class="why">
+	</article>
+	<div class="beach"><img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xpa1/t1.0-9/1555524_10201324430457198_1930011516_n.jpg"></div>
+	<article>
 		<h2>Why?</h2>
 			<p>Mr. Fitzpatrick is currently on leave from his life-long passion of music so he can pursue an expedited education in his new passion, web design.  Will this be an interesting experience?  All signs point to YES!</p>
-	</div>
-	<div class="where">
+	</article>
+	<article>
 		<h2>Where?</h2>
 			<p>But that's not to say it won't be tough!  The last two years have had their share of ups and downs since Mr. Fitzpatrick relocated to the infamous San Francisco Bay Area.  A stranger in a strange land you might say.  The dense fog, terrible drivers, and stench of patchouli might have done him in if it weren't for the endless love and support of Emily, the love of his life, and his special little dog, Sid.</p>   
-	</div>
+	</article>
 </body>
 <footer>Don't be a stranger!  Drop Rob a line!</footer>
 </html>
