more attempts at simplifying

--- a/index.html
+++ b/index.html
@@ -6,12 +6,25 @@
 </head>
 <body>
 <header>
+<img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xpa1/t1.0-9/1555524_10201324430457198_1930011516_n.jpg">
 	<h1>Rob Fitzpatrick</h1>
-	<h2>Who is this guy?</h2>
-	</header>
-	<img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xpa1/t1.0-9/1555524_10201324430457198_1930011516_n.jpg">
-<p>Yes, you have reached the magnificent website of the one, the only, Rob Fitzpatrick...  Musician.  Artist.  Spokesman of a generation?  Please, try and contain your excitement!	Mr. Fitzpatrick is currently on leave from his life-long passion of music so he can pursue an expedited education in his new passion, web development!  Will this be an interesting experience?  All signs point to YES!  But that's not to say it won't be tough!  The last two years have had their share of ups and downs since Mr. Fitzpatrick relocated to the infamous San Francisco Bay Area.  A stranger in a strange land you might say.  The dense fog, terrible drivers, and stench of patchouli might have done him in if it weren't for the endless support of Emily, the love of his life, and his special little dog, Sid.</p>  
-	
-<footer>Please get in touch!</footer
+	<ul>
+		<li><a href="mailto:rmfitzpatrick@gmail.com">Email</a></li>
+		<li><a href="https://www.linkedin.com/pub/robert-fitzpatrick/66/784/33a">Linked In</a></li>
+		<li><a href="https://www.facebook.com/rob.fitzpatrick.148">Facebook</a></li>
+		<li><a href="http://sickoids.bandcamp.com/">Bandcamp</a></li>
+
+	</ul>
+	<h2>So who is this guy?</h2>
+</header>
+<img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/1010778_10200251568116310_222161607_n.jpg?oh=66f6482195bb751a4018c98dbbe6b5bd&oe=54576BAC&__gda__=1413438708_96048af7c2d8dd0f5d533d02b3fda477">
+	<p>Yes, you have reached the magnificent website of the one, the only, Rob Fitzpatrick...  Musician.  Artist.  Spokesman of a generation?  Please, try and contain your excitement!	Mr. Fitzpatrick is currently on leave from his life-long passion of music so he can pursue an expedited education in his new passion, web development!  Will this be an interesting experience?  All signs point to YES!  But that's not to say it won't be tough!  The last two years have had their share of ups and downs since Mr. Fitzpatrick relocated to the infamous San Francisco Bay Area.  A stranger in a strange land you might say.  The dense fog, terrible drivers, and stench of patchouli might have done him in if it weren't for the endless support of Emily, the love of his life, and his special little dog, Sid.</p>  
+
+<h2>Please get in touch!</h2>	
+
+<input type="email" placeholder="Your email">
+<input type="submit">
+</footer/>
+
 </body>
 </html>
